--- a/wusick/app/views/partials/login.html
+++ b/wusick/app/views/partials/login.html
@@ -16,7 +16,7 @@
                   </div>
                   <div class="clearfix"></div>
                   <div class="form-group text-center">
-                    <small><p><a href="">Olvidaste tu contraseÃ±a?</a><p></small>
+                    <small><p><a href="">Olvidaste tu contraseña?</a><p></small>
                     <small><a href="/registro">Crear una cuenta</a></small>
                      <div class="clearfix"></div>
                      <button type="submit" class="btn btn-info" value="Log in" ng-click="obtenerUsuario()" ng-disabled="login.$pristine || login.$invalid">Log in</button>
