--- a/wusick/app/views/partials/registro.html
+++ b/wusick/app/views/partials/registro.html
@@ -6,8 +6,8 @@
         	<form id="registro" role="form" name="registro">
 		            	<div ng-class="{'has-error': registro.nombreU.$invalid, 'has-success': registro.nombreU.$valid}" class="form-group">
 				            <label id="labname">Nombre</label>
-				            <input type="text" name="nombreU" class="form-control"  placeholder="Usuario" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Usuario'" ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="12" required/>
-				           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 12 caracteres alfanuméricos.</small></p>
+				            <input type="text" name="nombreU" class="form-control"  placeholder="Usuario" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Usuario'" ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
+				           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small></p>
 			            </div>			            
 			            <div class="clearfix"></div>
 
@@ -20,8 +20,8 @@
 
 			            <div ng-class="{'has-error': registro.passU.$invalid, 'has-success': registro.passU.$valid}" class="form-group">
 				            <label id="labpass">Contraseña</label>
-				            <input type="text" name="passU" id="passU" class="form-control" placeholder="Contraseña" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Contraseña'" ng-model="userData.pass" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="12" required/>
-				            <small class="text-danger" ng-show="registro.passU.$invalid">Entre 6 y 12 caracteres alfanuméricos.</small>
+				            <input type="text" name="passU" id="passU" class="form-control" placeholder="Contraseña" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Contraseña'" ng-model="userData.pass" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
+				            <small class="text-danger" ng-show="registro.passU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small>
 			            </div>
 			            <div class="clearfix"></div>
 
@@ -35,24 +35,50 @@
 				            <small class="text-danger" ng-show="registro.tipoU.$invalid">Debes seleccionar un tipo de usuario obligatoriamente.</small>
 			            </div>
 			            <div class="clearfix"></div>
+			          
 						<!--USUARIO BASICO-->
-						 <div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
-				            <label id="labfec" for="fechaU">Fecha de Nacimiento</label>
-				            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" required/>
-				            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
-			            </div>
-			            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
-				            <label id="labsexo" for="sexoU">Sexo</label>
-				            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" required>
-				            		<option>Mujer</option>
-				            		<option>Hombre</option>
-				            	</select>
-				            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
-			            </div>
-							
+							 <div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
+					            <label id="labfec" for="fechaU">Fecha de Nacimiento</label>
+					            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" required/>
+					            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
+				            </div>
+				            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
+					            <label id="labsexo" for="sexoU">Sexo</label>
+					            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" required>
+					            		<option>Mujer</option>
+					            		<option>Hombre</option>
+					            	</select>
+					            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
+				            </div>
+			          
+
 						<!--USUARIO ARTISTA-->
+							 <div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='2'">
+					            <label id="labsexo" for="sexoU">Género Musical</label>
+					            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control" required>
+					            		<option>Rock</option>
+					            		<option>Pop</option>
+					            	</select>
+					            <small class="text-danger" ng-show="registro.generoU.$invalid">¿Qué tipo de música toca tu grupo?</small>
+				            </div>
 
 
+				        <!--USUARIO SALA-->
+							 <div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
+					            <label id="labafo" for="aforoU">Aforo</label>
+					            <input type="text" id="aforoU" ng-model="userData.aforo" name="aforoU" class="form-control" ng-pattern="/\d/g" required />
+					            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
+				            </div>
+				            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
+					            <label id="labafo" for="poblacionU">Población</label>
+					            <input type="text" id="poblacionU" ng-model="userData.poblacion" name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" required />
+					            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
+				            </div>
+				            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
+					            <label id="labafo" for="direccionU">Dirección</label>
+					            <input type="text" id="direccionU" ng-model="userData.poblacion" name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" required />
+					            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
+				            </div>
 
 
 
