--- a/wusick/app/views/partials/registro.html
+++ b/wusick/app/views/partials/registro.html
@@ -39,14 +39,14 @@
 						<!--USUARIO BASICO-->
 							 <div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
 					            <label id="labfec" for="fechaU">Fecha de Nacimiento</label>
-					            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" required/>
+					            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" ng-required="userData.tipo=='1'"/>
 					            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
 				            </div>
 				            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
 					            <label id="labsexo" for="sexoU">Sexo</label>
-					            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" required>
-					            		<option>Mujer</option>
-					            		<option>Hombre</option>
+					            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" ng-required="userData.tipo=='1'">
+					            		<option value="M">Mujer</option>
+					            		<option value="H">Hombre</option>
 					            	</select>
 					            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
 				            </div>
@@ -55,7 +55,7 @@
 						<!--USUARIO ARTISTA-->
 							 <div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='2'">
 					            <label id="labsexo" for="sexoU">Género Musical</label>
-					            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control" required>
+					            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control" ng-required="userData.tipo=='2'">
 					            		<option>Rock</option>
 					            		<option>Pop</option>
 					            	</select>
@@ -66,26 +66,19 @@
 				        <!--USUARIO SALA-->
 							 <div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
 					            <label id="labafo" for="aforoU">Aforo</label>
-					            <input type="text" id="aforoU" ng-model="userData.aforo" name="aforoU" class="form-control" ng-pattern="/\d/g" required />
+					            <input type="text" id="aforoU" ng-model="userData.aforo" name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
 					            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
 				            </div>
 				            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
 					            <label id="labafo" for="poblacionU">Población</label>
-					            <input type="text" id="poblacionU" ng-model="userData.poblacion" name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" required />
+					            <input type="text" id="poblacionU" ng-model="userData.poblacion" name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
 					            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
 				            </div>
 				            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
 					            <label id="labafo" for="direccionU">Dirección</label>
-					            <input type="text" id="direccionU" ng-model="userData.poblacion" name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" required />
+					            <input type="text" id="direccionU" ng-model="userData.poblacion" name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
 					            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
 				            </div>
-
-
-
-
-
-
-
 
 						<div class="form-group text-center">
 			            <button class="btn btn-info" value="Log in" ng-click="createUsuario()" ng-disabled="registro.$pristine || registro.$invalid">Crear Cuenta</button>
