--- a/wusick/app/views/partials/registro.html
+++ b/wusick/app/views/partials/registro.html
@@ -26,12 +26,12 @@
 			            <div class="clearfix"></div>
 
 			            <div ng-class="{'has-error': registro.tipoU.$invalid,'has-success': registro.tipoU.$valid}" class="form-group">
-				            <label id="labtipo" for="tipoU">Tipo de Usuario</label>
+				            <label id="labtipo" for="tipoU">Tipo de Perfil</label>
 				            <select id="tipoU"  name="tipoU" class="form-control" ng-model="userData.tipo" ng-init="tiposUsuario()" required>
 				            	<option ng-repeat="tipo in tipos" ng-value="{{tipo.idTipo_usuarios}}">{{tipo.nombre}}</option>
 				            
 				            </select>
-				            <small class="text-danger" ng-show="registro.tipoU.$invalid">Debes seleccionar un tipo de usuario obligatoriamente.</small>
+				            <small class="text-danger" ng-show="registro.tipoU.$invalid">Debes seleccionar un tipo de perfil obligatoriamente.</small>
 			            </div>
 			            <div class="clearfix"></div>
 			          
