--- a/wusick/app/views/index.html
+++ b/wusick/app/views/index.html
@@ -55,7 +55,6 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -64,6 +63,7 @@
         <script src="scripts/controllers/controllers.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/smoke/smoke.min.js"></script>
+        <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
