--- a/wusick/app/views/partials/registro.html
+++ b/wusick/app/views/partials/registro.html
@@ -5,28 +5,39 @@
         <div class="col-xs-12 col">
         	<form id="registro" role="form" name="registro">
 		            	<div ng-class="{'has-error': registro.nombreU.$invalid, 'has-success': registro.nombreU.$valid}" class="form-group">
-				            <label id="labname">Nombre</label>
+				            <label id="labname" for="nombreU" class="control-label">Nombre</label>
+				             <span ng-show="registro.nombreU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				             <span ng-show="registro.nombreU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            <input type="text" name="nombreU" class="form-control"  placeholder="Usuario" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Usuario'" ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
 				           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small></p>
 			            </div>			            
 			            <div class="clearfix"></div>
 
 			            <div ng-class="{'has-error': registro.emailU.$invalid, 'has-success': registro.emailU.$valid}" class="form-group">	
-				            <label id="labmail">Email</label>
+				            <label id="labmail" for="emailU" class="control-label">Email</label> 
+				            <span ng-show="registro.emailU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				            <span ng-show="registro.emailU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            <input type="email" name="emailU" class="form-control"  placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.email" required/>
 				            <small class="text-danger" ng-show="registro.emailU.$invalid">Email inválido.</small>
+				          
 			            </div>
 			            <div class="clearfix"></div>
 
 			            <div ng-class="{'has-error': registro.passU.$invalid, 'has-success': registro.passU.$valid}" class="form-group">
-				            <label id="labpass">Contraseña</label>
+				            <label id="labpass" for="passU" class="control-label">Contraseña</label>
+				            <span ng-show="registro.passU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				             <span ng-show="registro.passU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            <input type="text" name="passU" id="passU" class="form-control" placeholder="Contraseña" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Contraseña'" ng-model="userData.pass" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
 				            <small class="text-danger" ng-show="registro.passU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small>
+				           
+				           	
 			            </div>
 			            <div class="clearfix"></div>
 
 			            <div ng-class="{'has-error': registro.tipoU.$invalid,'has-success': registro.tipoU.$valid}" class="form-group">
-				            <label id="labtipo" for="tipoU">Tipo de Perfil</label>
+				            <label id="labtipo" for="tipoU" class="control-label">Tipo de Perfil</label>
+				            <span ng-show="registro.tipoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				            <span ng-show="registro.tipoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            <select id="tipoU"  name="tipoU" class="form-control" ng-model="userData.tipo" ng-init="tiposUsuario()" required>
 				            	<option ng-repeat="tipo in tipos" ng-value="{{tipo.idTipo_usuarios}}">{{tipo.nombre}}</option>
 				            
@@ -37,12 +48,16 @@
 			          
 						<!--USUARIO BASICO-->
 							 <div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
-					            <label id="labfec" for="fechaU">Fecha de Nacimiento</label>
+					            <label id="labfec" for="fechaU" class="control-label">Fecha de Nacimiento</label>
+					            <span ng-show="registro.fechaU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				                <span ng-show="registro.fechaU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 					            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" ng-required="userData.tipo=='1'"/>
 					            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
 				            </div>
 				            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='1'">
-					            <label id="labsexo" for="sexoU">Sexo</label>
+					            <label id="labsexo" for="sexoU" class="control-label">Sexo</label>
+					            <span ng-show="registro.sexoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				                <span ng-show="registro.sexoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 					            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" ng-required="userData.tipo=='1'">
 					            		<option value="M">Mujer</option>
 					            		<option value="H">Hombre</option>
@@ -53,7 +68,9 @@
 
 						<!--USUARIO ARTISTA-->
 							 <div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='2'">
-					            <label id="labsexo" for="sexoU">Género Musical</label>
+					            <label id="labgenero" for="generoU" class="control-label">Género Musical</label>
+					            <span ng-show="registro.generoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				            	<span ng-show="registro.generoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 					            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control" ng-required="userData.tipo=='2'" ng-init="generos()">
 					            		<option ng-repeat="genero in generos" ng-value="{{genero.idGeneros}}">{{genero.nombre}}</option>
 					            	</select>
@@ -63,17 +80,23 @@
 
 				        <!--USUARIO SALA-->
 							 <div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
-					            <label id="labafo" for="aforoU">Aforo</label>
+					            <label id="labafo" for="aforoU" class="control-label">Aforo</label>
+					            <span ng-show="registro.aforoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				             	<span ng-show="registro.aforoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 					            <input type="text" id="aforoU" ng-model="userData.aforo" name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
 					            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
 				            </div>
 				            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
-					            <label id="labafo" for="poblacionU">Población</label>
+					            <label id="labafo" for="poblacionU" class="control-label">Población</label>
+					            <span ng-show="registro.poblacionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				            	<span ng-show="registro.poblacionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 					            <input type="text" id="poblacionU" ng-model="userData.poblacion" name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
 					            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
 				            </div>
 				            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group" ng-show="registro.tipoU.$valid && userData.tipo=='3'">
-					            <label id="labafo" for="direccionU">Dirección</label>
+					            <label id="labafo" for="direccionU" class="control-label">Dirección</label>
+					            <span ng-show="registro.direccionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				                <span ng-show="registro.direccionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 					            <input type="text" id="direccionU" ng-model="userData.direccion" name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
 					            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
 				            </div>
