--- a/wusick/app/views/partials/login.html
+++ b/wusick/app/views/partials/login.html
@@ -5,8 +5,8 @@
                 <div class="clearfix"></div>
                 <form id="login" role="form" name ="login">
                   <div class="form-group">
-                      <label id="labname" for="nombre">Nombre</label>
-                      <input type="text" placeholder="Usuario" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Usuario'" ng-model="userData.nombre" id="nombre" name="nombre" class="form-control"/>
+                      <label id="labmail" for="nombre">Email</label>
+                      <input type="email" placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.nombre" id="nombre" name="nombre" class="form-control"/>
                   </div>
                   <div class="clearfix"></div>
 
