--- a/wusick/app/views/partials/login.html
+++ b/wusick/app/views/partials/login.html
@@ -6,7 +6,7 @@
                 <form id="login" role="form" name ="login">
                   <div class="form-group">
                       <label id="labmail" for="nombre">Email</label>
-                      <input type="email" placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.nombre" id="nombre" name="nombre" class="form-control"/>
+                      <input type="email" placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.email" id="nombre" name="nombre" class="form-control"/>
                   </div>
                   <div class="clearfix"></div>
 
