--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12 col-md-3" id="izq">
 		
         </div>
-        <div class="col-xs-12 col-md-3" id="central">
+        <div class="col-xs-12 col-md-3" id="central" ng-init='prueba()'>
 			<div id="comment" class="col-xs-12">
 			</div>
         </div>
