modified:   wusick/.travis.yml 	modified:   wusick/app/scripts/app.js 	modified:   wusick/app/scripts/controllers/controllers.js 	new file:   wusick/app/scripts/controllers/main.js 	new file:   wusick/app/scripts/services/services.js 	new file:   wusick/app/views/404.jade 	modified:   wusick/app/views/index.html 	new file:   wusick/app/views/index.jade 	modified:   wusick/app/views/partials/main.html 	new file:   wusick/app/views/partials/main.jade 	new file:   wusick/app/views/partials/navbar.jade 	modified:   wusick/lib/controllers/api.js 	modified:   wusick/lib/routes.js 	new file:   wusick/test/karma.conf.js

--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -1,10 +1,10 @@
 <div ng-include="'partials/navbarMain'"></div>
 
-	<div id="mainpage" class="row" ng-init='getSesion()'>
+	<div id="mainpage" class="row" ng-init="">
         <div class="col-xs-12 col-md-3" id="izq">
-		
+            {{message}}
         </div>
-        <div class="col-xs-12 col-md-3" id="central" ng-init='getUserById()'>
+        <div class="col-xs-12 col-md-3" id="central">
 			<div id="comment" class="col-xs-12">
 			</div>
         </div>
