--- a/wusick/app/views/404.html
+++ b/wusick/app/views/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Page Not Found!......:(</title>
+    <title>Página no encontrada!......:(</title>
     <style>
       ::-moz-selection {
         background: #b3d4fc;
@@ -20,6 +20,10 @@
         line-height: 1.4;
         color: #737373;
         background: #f0f0f0;
+        background-image: url("../images/error404.jpg");
+        background-position:center;
+        background-attachment:fixed;
+        background-size:100% 100%;
         -webkit-text-size-adjust: 100%;
         -ms-text-size-adjust: 100%;
       }
@@ -141,9 +145,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Not found <span>:(</span></h1>
-      <p>Sorry, but the page you were trying to view does not exist.</p>
-      <p>It looks like this was the result of either:</p>
+      <h1>Página no encontrada <span>:(</span></h1>
+      <p>Lo sentimos, pero la página que estabas tratando de vistar no existe.</p>
       <ul>
         <li>a mistyped address</li>
         <li>an out-of-date link</li>
