cambios en,  admin-index.html

--- a/wusick/app/views/partials/jades/admin-index.html
+++ b/wusick/app/views/partials/jades/admin-index.html
@@ -24,7 +24,7 @@
 					<td>{{item.email}}</td>
 					<td>{{item.fecha_alta}}</td>
 					<td ng-if="item.Tipo_usuarios_idTipo_usuarios == 1">
-    					BÃ¡sico
+    					Básico
 					</td>
 					<td ng-if="item.Tipo_usuarios_idTipo_usuarios == 2">
     					Artista
