--- a/wusick/app/views/partials/navbarAdmin.html
+++ b/wusick/app/views/partials/navbarAdmin.html
@@ -4,5 +4,6 @@
         <a ng-href="{{item.link}}">{{item.title}}</a>
     </li>
   </ul>
-  <h3 class="text-muted">Wusick <small>Panel de administración</small></h3>
+  <span style="float:left; display: inline-block;" class="glyphicon glyphicon-wrench"></span>
+  <h3 class="text-muted"> Wusick <small>Panel de administración</small></h3>
 </div>
