--- a/wusick/app/views/partials/jades/admin-index.html
+++ b/wusick/app/views/partials/jades/admin-index.html
@@ -52,8 +52,8 @@
 					</td>
 
 					<td class="text-center">
-						<a href onclick = ($('#edicion').css("display","block")); ng-click='editarUsuario($event)' >
-							<img src='../../../images/edit.png', alt='Editar' data={{item.idUsuario}} name={{item.nombre}} />
+						<a href onclick = ($('#edicion').css("display","block"));>
+							<img src='../../../images/edit.png', alt='Editar' data={{item.idUsuario}} name={{item.nombre}} ng-click='modificarUsuario($event)' />
 						</a>
 					</td>
 					<td class="text-center">
@@ -82,7 +82,7 @@
 		            <label id="labname" for="nombreU" class="control-label">Nombre</label>
 		             <span ng-show="registro.nombreU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 		             <span ng-show="registro.nombreU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-		            <input type="text" name="nombreU" class="form-control"  placeholder="Usuario" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Usuario'" ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
+		            <input type="text" name="nombreU" class="form-control" ng-value={{nombre}} ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
 		           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small></p>
 	            </div>			            
 	            <div class="clearfix"></div>
@@ -91,7 +91,7 @@
 		            <label id="labmail" for="emailU" class="control-label">Email</label> 
 		            <span ng-show="registro.emailU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 		            <span ng-show="registro.emailU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-		            <input type="email" name="emailU" class="form-control"  placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.email" required/>
+		            <input type="email" name="emailU" class="form-control" ng-value={{email}} ng-model="userData.email" required/>
 		            <small class="text-danger" ng-show="registro.emailU.$invalid">Email inválido.</small>
 		          
 	            </div>
