--- a/wusick/app/views/partials/jades/admin-index.html
+++ b/wusick/app/views/partials/jades/admin-index.html
@@ -1,6 +1,7 @@
 <div ng-include="'partials/navbarAdmin'"></div>
 
 <div class="container">
+	<h2>Bienvenido<span class="text-info">{{admin}}</span></h2>
     <div ng-init="obtenerListado()">
     	<div>
     		
